[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Cartas-principal.gd" type="Script" id=1]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/iconos/help.png" type="Texture" id=3]
[ext_resource path="res://assets/Botones/jugar2.png" type="Texture" id=4]
[ext_resource path="res://assets/espaciadores/espacio.png" type="Texture" id=5]
[ext_resource path="res://images/placeholder-bosque.png" type="Texture" id=6]
[ext_resource path="res://assets/iconos/atras.png" type="Texture" id=7]
[ext_resource path="res://assets/espaciadores/espacio2.png" type="Texture" id=8]
[ext_resource path="res://assets/espaciadores/Espacio3.png" type="Texture" id=9]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=10]
[ext_resource path="res://BGM/mt6.mp3" type="AudioStream" id=11]
[ext_resource path="res://images/fondo-libro.png" type="Texture" id=12]
[ext_resource path="res://assets/Instrucciones-arbol.png" type="Texture" id=13]
[ext_resource path="res://assets/controles-arbol.png" type="Texture" id=14]
[ext_resource path="res://assets/iconos/salir.png" type="Texture" id=15]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 3000.0
margin_bottom = 1200.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 61.0
margin_top = 50.0
margin_right = 101.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "AKJWBDKAW"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1050.0
margin_bottom = 602.0

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 602.0
texture_normal = ExtResource( 8 )

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 118.0
margin_bottom = 91.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 7 )

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer"]
margin_left = 122.0
margin_right = 192.0
margin_bottom = 602.0
texture_normal = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 196.0
margin_right = 892.0
margin_bottom = 602.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 696.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 3 )
text = " CONOCE EL BOSQUE  "
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 696.0
margin_bottom = 428.0

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 169.0
hint_tooltip = "Jugar"
texture_normal = ExtResource( 5 )
stretch_mode = 5

[node name="TextureButton6" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 169.0
hint_tooltip = "Jugar"
texture_normal = ExtResource( 5 )
stretch_mode = 5

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 178.0
margin_bottom = 169.0
hint_tooltip = "Jugar"
texture_normal = ExtResource( 9 )
stretch_mode = 5

[node name="TextureButton5" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 212.0
margin_bottom = 169.0
hint_tooltip = "Jugar"
texture_normal = ExtResource( 9 )
stretch_mode = 5

[node name="JUGAR" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 465.0
margin_bottom = 112.0
hint_tooltip = "Jugar"
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 896.0
margin_right = 996.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Ayuda"
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -17.0

[node name="Ayuda" type="Popup" parent="."]
margin_right = 1030.0
margin_bottom = 600.0
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="Ayuda"]
margin_right = 2062.0
margin_bottom = 1449.0
rect_scale = Vector2( 0.499, 0.417 )
texture = ExtResource( 12 )

[node name="Cerrar" type="TextureButton" parent="Ayuda"]
margin_right = 68.0
margin_bottom = 68.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="Ayuda"]
margin_top = 102.0
margin_right = 512.0
margin_bottom = 600.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CONTROLES" type="TextureButton" parent="Ayuda/VBoxContainer"]
margin_left = 81.0
margin_right = 431.0
margin_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 14 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Ayuda"]
margin_left = 512.0
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CONTROLES2" type="TextureButton" parent="Ayuda/VBoxContainer2"]
margin_left = 81.0
margin_right = 431.0
margin_bottom = 371.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 13 )

[connection signal="pressed" from="HBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/JUGAR" to="." method="_on_JUGAR_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Ayuda/Cerrar" to="." method="_on_Cerrar_pressed"]
